Repairing the directory structure